[gd_scene load_steps=2 format=3 uid="uid://bd0of2v5c5buh"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_3h8vs"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_3h8vs")

[node name="resume_button" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="restart_button" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="menu_button" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[connection signal="pressed" from="resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="menu_button" to="." method="_on_menu_button_pressed"]
